fixed text align on images to remove gapp styling of images

--- a/css/media-rules.css
+++ b/css/media-rules.css
@@ -216,6 +216,9 @@
   .mobile-logo-wrapper {
     display: none;
   }
+  .menu-wrapper {
+    height: 40em;
+  }
   .menu-wrapper img { 
     width: 100%;
 }
